# libelf

./: meson.build
src/: elf_strptr.c
