project(
  'libelf',
  ['c'],
  default_options: ['warning_level=1', 'buildtype=release'],
  meson_version: '>=0.60.3',
)

lz = dependency('zlib', required: true)

libelf = static_library(
  'elf',
  sources: files(
    'src/crc32.c',
    'src/elf32_checksum.c',
    'src/elf32_fsize.c',
    'src/elf32_getchdr.c',
    'src/elf32_getehdr.c',
    'src/elf32_getphdr.c',
    'src/elf32_getshdr.c',
    'src/elf32_newehdr.c',
    'src/elf32_newphdr.c',
    'src/elf32_offscn.c',
    'src/elf32_updatefile.c',
    'src/elf32_updatenull.c',
    'src/elf32_xlatetof.c',
    'src/elf32_xlatetom.c',
    'src/elf64_checksum.c',
    'src/elf64_fsize.c',
    'src/elf64_getchdr.c',
    'src/elf64_getehdr.c',
    'src/elf64_getphdr.c',
    'src/elf64_getshdr.c',
    'src/elf64_newehdr.c',
    'src/elf64_newphdr.c',
    'src/elf64_offscn.c',
    'src/elf64_updatefile.c',
    'src/elf64_updatenull.c',
    'src/elf64_xlatetof.c',
    'src/elf64_xlatetom.c',
    'src/elf_begin.c',
    'src/elf_clone.c',
    'src/elf_cntl.c',
    'src/elf_compress.c',
    'src/elf_compress_gnu.c',
    'src/elf_end.c',
    'src/elf_error.c',
    'src/elf_fill.c',
    'src/elf_flagdata.c',
    'src/elf_flagehdr.c',
    'src/elf_flagelf.c',
    'src/elf_flagphdr.c',
    'src/elf_flagscn.c',
    'src/elf_flagshdr.c',
    'src/elf_getarhdr.c',
    'src/elf_getaroff.c',
    'src/elf_getarsym.c',
    'src/elf_getbase.c',
    'src/elf_getdata.c',
    'src/elf_getdata_rawchunk.c',
    'src/elf_getident.c',
    'src/elf_getphdrnum.c',
    'src/elf_getscn.c',
    'src/elf_getshdrnum.c',
    'src/elf_getshdrstrndx.c',
    'src/elf_gnu_hash.c',
    'src/elf_hash.c',
    'src/elf_kind.c',
    'src/elf_memory.c',
    'src/elf_ndxscn.c',
    'src/elf_newdata.c',
    'src/elf_newscn.c',
    'src/elf_next.c',
    'src/elf_nextscn.c',
    'src/elf_rand.c',
    'src/elf_rawdata.c',
    'src/elf_rawfile.c',
    'src/elf_readall.c',
    'src/elf_scnshndx.c',
    'src/elf_strptr.c',
    'src/elf_update.c',
    'src/elf_version.c',
    'src/eu-search.c',
    'src/gelf_checksum.c',
    'src/gelf_fsize.c',
    'src/gelf_getauxv.c',
    'src/gelf_getchdr.c',
    'src/gelf_getclass.c',
    'src/gelf_getdyn.c',
    'src/gelf_getehdr.c',
    'src/gelf_getlib.c',
    'src/gelf_getmove.c',
    'src/gelf_getnote.c',
    'src/gelf_getphdr.c',
    'src/gelf_getrel.c',
    'src/gelf_getrela.c',
    'src/gelf_getshdr.c',
    'src/gelf_getsym.c',
    'src/gelf_getsyminfo.c',
    'src/gelf_getsymshndx.c',
    'src/gelf_getverdaux.c',
    'src/gelf_getverdef.c',
    'src/gelf_getvernaux.c',
    'src/gelf_getverneed.c',
    'src/gelf_getversym.c',
    'src/gelf_newehdr.c',
    'src/gelf_newphdr.c',
    'src/gelf_offscn.c',
    'src/gelf_update_auxv.c',
    'src/gelf_update_dyn.c',
    'src/gelf_update_ehdr.c',
    'src/gelf_update_lib.c',
    'src/gelf_update_move.c',
    'src/gelf_update_phdr.c',
    'src/gelf_update_rel.c',
    'src/gelf_update_rela.c',
    'src/gelf_update_shdr.c',
    'src/gelf_update_sym.c',
    'src/gelf_update_syminfo.c',
    'src/gelf_update_symshndx.c',
    'src/gelf_update_verdaux.c',
    'src/gelf_update_verdef.c',
    'src/gelf_update_vernaux.c',
    'src/gelf_update_verneed.c',
    'src/gelf_update_versym.c',
    'src/gelf_xlate.c',
    'src/gelf_xlatetof.c',
    'src/gelf_xlatetom.c',
    'src/libelf_crc32.c',
    'src/libelf_next_prime.c',
    'src/next_prime.c',
    'src/nlist.c',
  ),
  include_directories: include_directories('src', 'include'),
  c_args: ['-DHAVE_CONFIG_H'],
  dependencies: [lz],
)

libelf_dep = declare_dependency(link_with: libelf, include_directories: include_directories('include'))
